--- a/style/style.qss
+++ b/style/style.qss
@@ -23,8 +23,8 @@ QTreeView, QListView
 
 QWidget:item:hover
 {
-    background-color: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #ffa02f, stop: 1 #ca0619);
-    color: #000000;
+    /* background-color: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #ffa02f, stop: 1 #ca0619); */
+    /* color: #000000; */
 }
 
 QWidget:item:selected
